--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: CS 7641 Group 20 Project
+description: Eunseo Cho, Ivan Leung, Michael Wigal, Pierre Debnam, Sakshi Dhawan
